[main][tests] Passing AuditLoggingITSpec added, @LogActivity mechanics blueprinted [WIP]